--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
     <!-- development version, includes helpful console warnings -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 
@@ -24,10 +26,13 @@
     <div id="root">
         <div class="container">
             <div class="row">
+                <div class="col-12 text-center"><h1>ToDo List</h1></div>
                 <div class="col-12 text-center">
                     <ul class="list-group">
-                        <li v-for="toDo in todos" class="list-group-item" :class="toDo.done? 'text-decoration-line-through' : '' " >
+                        <li v-for="toDo in todos" class="d-flex justify-content-between list-group-item bg-light w-50 border-3 border-danger" :class="toDo.done? 'text-decoration-line-through' : '' " >
                             {{ toDo.text }}
+
+                            <i @click="removeToDo(index)" class="fa-solid fa-xmark"></i>
                         </li>
                     </ul>
                     
