milestone 3 not ok

--- a/index.html
+++ b/index.html
@@ -24,18 +24,29 @@
 
 
     <div id="root">
-        <div class="container">
+        <div class="container-list">
             <div class="row">
-                <div class="col-12 text-center"><h1>ToDo List</h1></div>
+
+
+                <div class="col-12 text-center">
+                    <h1>ToDo List</h1>
+                </div>
+
+            </div>
+
+            <div class="row justify-content-center">
                 <div class="col-12 text-center">
                     <ul class="list-group">
-                        <li v-for="toDo in todos" class="d-flex justify-content-between list-group-item bg-light w-50 border-3 border-danger" :class="toDo.done? 'text-decoration-line-through' : '' " >
+                        <li v-for="toDo in todos"
+                            class="d-flex justify-content-between list-group-item bg-light w-100 border-3 border-danger"
+                            :class="toDo.done? 'text-decoration-line-through' : '' ">
                             {{ toDo.text }}
 
                             <i @click="removeToDo(index)" class="fa-solid fa-xmark"></i>
                         </li>
                     </ul>
                     
+                    <input type="text" v-model.trim="newToDo" @keyUp.enter="addToList(newToDo)">
                 </div>
             </div>
         </div>
